// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkBannerAlert should accept userland styling 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
      "width": 50,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly when not shown 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": 0.01,
      "opacity": 0,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with animateOnEnter 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": 0.01,
      "opacity": 0,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with animateOnLeave 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with children provided (expandable) 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Expand"
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "type": "ThemeAttrAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Object {
                "marginStart": 8,
                "marginVertical": 16,
                "paddingBottom": 0.8,
                "paddingTop": 3,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        collapsable={undefined}
        style={
          Object {
            "borderRadius": 0,
            "height": 0.01,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 24,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with dismissable 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 4,
              },
              Object {
                "marginStart": 8,
                "marginVertical": 8,
              },
            ]
          }
        >
          <View
            accessibilityComponentType="button"
            accessibilityLabel="Dismiss"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 8,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "rgb(82, 76, 97)",
                      "fontFamily": "sans-serif",
                      "fontSize": 14,
                      "fontWeight": "400",
                    },
                    Object {
                      "fontFamily": "sans-serif-medium",
                    },
                    Array [
                      Object {
                        "color": "rgb(0, 178, 214)",
                      },
                    ],
                  ]
                }
              >
                Dismiss
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with expanded 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Expand"
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackgroundBorderless",
            "type": "ThemeAttrAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          Neutral alert.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Object {
                "marginStart": 8,
                "marginVertical": 16,
                "paddingBottom": 0.8,
                "paddingTop": 3,
              },
            ]
          }
        >
          
        </Text>
      </View>
      <View
        collapsable={undefined}
        style={
          Object {
            "borderRadius": 0,
            "height": null,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 24,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "rgb(82, 76, 97)",
                  "fontFamily": "sans-serif",
                  "fontSize": 14,
                  "fontWeight": "400",
                },
                Object {},
              ]
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to error 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(255, 84, 82)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          error alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to neutral 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(129, 123, 143)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          neutral alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to success 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(0, 215, 117)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          success alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly with type equal to warn 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "height": null,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={null}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(243, 242, 245)",
            "borderRadius": 2,
            "minHeight": 1,
          },
          null,
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingHorizontal": 24,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "lineHeight": 24,
              },
              Object {
                "fontSize": 16,
                "lineHeight": 16,
              },
              Array [
                Object {
                  "marginEnd": 8,
                  "marginVertical": 16,
                  "paddingBottom": 0.8,
                  "paddingTop": 3,
                },
                Object {
                  "color": "rgb(255, 187, 0)",
                },
              ],
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": "400",
              },
              Object {
                "flex": 1,
                "marginVertical": 16,
              },
            ]
          }
        >
          warn alert.
        </Text>
      </View>
    </View>
  </View>
</View>
`;
